// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorBoundary > catches errors and displays fallback UI 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        Something went wrong while processing your request. Please refresh the page or try again later.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        Test error
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays correct message for error: "AuthenticationError: Invalid token" > ErrorBoundary with error: AuthenticationError: Invalid token 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        You do not have permission to access this page, or there's an issue with your credentials. Please try authenticating again.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        AuthenticationError: Invalid token
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays correct message for error: "AuthorizationError: Access denied" > ErrorBoundary with error: AuthorizationError: Access denied 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        You do not have permission to access this page, or there's an issue with your credentials. Please try authenticating again.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        AuthorizationError: Access denied
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays correct message for error: "CORS Error" > ErrorBoundary with error: CORS Error 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        It seems we are unable to retrieve the data due to a configuration issue. Please try again later.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        CORS Error
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays correct message for error: "Failed to fetch" > ErrorBoundary with error: Failed to fetch 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        There was a problem fetching data from the server. Please try refreshing the page or come back later.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        Failed to fetch
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays correct message for error: "NetworkError: Failed to connect" > ErrorBoundary with error: NetworkError: Failed to connect 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        It looks like you're offline or experiencing network issues. Please check your internet connection and try reloading the page.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        NetworkError: Failed to connect
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays correct message for error: "RateLimitError: Too many requests" > ErrorBoundary with error: RateLimitError: Too many requests 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        Too many requests have been made. Please wait a few minutes before trying again.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        RateLimitError: Too many requests
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays correct message for error: "TimeoutError: Request timed out" > ErrorBoundary with error: TimeoutError: Request timed out 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        The request took too long to complete. Please check your internet connection and try again later.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        TimeoutError: Request timed out
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays correct message for error: "ValidationError: Invalid input" > ErrorBoundary with error: ValidationError: Invalid input 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        There was an issue with the form input. Please check the fields and ensure they are correctly filled out.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        ValidationError: Invalid input
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays the error message 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        Something went wrong while processing your request. Please refresh the page or try again later.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        Test error
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > displays the reload button by default 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        Something went wrong while processing your request. Please refresh the page or try again later.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        Test error
      </pre>
      <button
        aria-label="Reload the page to try again"
        class="btn btn-primary btn-sm mt-4"
      >
        Reload Page
      </button>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > does not display the reload button when showReloadButton is false 1`] = `
<div>
  <div
    aria-live="assertive"
    class="flex flex-col items-center justify-center w-full p-4 sm:p-6 md:p-8"
    role="alert"
  >
    <div
      class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-base-100 p-4 sm:p-6 md:p-8 rounded-lg shadow-lg overflow-auto"
    >
      <h1
        class="text-lg sm:text-xl md:text-2xl font-bold mb-4 text-error"
      >
        Oops! Something went wrong.
      </h1>
      <p
        class="mb-4 text-sm sm:text-base md:text-lg"
      >
        Something went wrong while processing your request. Please refresh the page or try again later.
      </p>
      <pre
        class="whitespace-pre-wrap text-xs sm:text-sm md:text-base text-base-content bg-error bg-opacity-10 p-2 sm:p-4 rounded-lg font-mono mb-4 max-h-40 overflow-auto"
      >
        Test error
      </pre>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > does not render error message if error is null > ErrorBoundary with error null 1`] = `
<div>
  <div>
    Child Component
  </div>
</div>
`;

exports[`ErrorBoundary > resets error state when component is unmounted and remounted > ErrorBoundary after remount 1`] = `
<div>
  <div>
    Child Component
  </div>
</div>
`;
